--- a/paper.tex
+++ b/paper.tex
@@ -32,6 +32,7 @@
 \usepackage{amsthm}
 \usepackage{listings}
 \usepackage{paralist}
+\usepackage{placeins}
 \usepackage{graphicx}
 \usepackage{mathtools}
 \usepackage{multirow}
@@ -135,6 +136,8 @@ IBM Research, Israel
 \input{related}
 \input{conclusion}
 
+
+
 \begin{small}
 \bibliographystyle{plain}
 \bibliography{paper}
@@ -143,7 +146,8 @@ IBM Research, Israel
 \balance
 
 \appendix
-\input{secondexp}
+
+%\input{secondexp}
 \input{results}
 
 
