--- a/related.tex
+++ b/related.tex
@@ -6,9 +6,12 @@ As most of the research on privacy monitoring builds on the tainting approach, w
 
 The main difference between \Tool\ and the approaches above, which all apply information-flow tracking, is that \Tool\ exercises ``fuzzy'' reasoning, in the form of statistical classification, rather than enforcing a clear-cut criterion. As part of this, \Tool\ factors into the privacy judgment the data values flowing into the sink statement, which provides additional evidence beyond data flow.
 
-\paragraph{Quantitative Approaches} Different approaches have been proposed for quantitative information-flow analysis, all unified by the observation that data leakage is a quantitative rather than boolean judgment. McCamant and Ernst~\cite{ME:PLDI08} present an offline dynamic analysis that measures the amount of secret information that can be inferred from a program's outputs, where the text of the program is considered public. Their approach relies on taint analysis at the bit level. It provides a sound upper bound on the actual information flow, but only with respect to the observed runs.
+\paragraph{Quantitative Approaches} Different approaches have been proposed for quantitative information-flow analysis, all unified by the observation that data leakage is a quantitative rather than boolean judgment. McCamant and Ernst~\cite{ME:PLDI08} present an offline dynamic analysis that measures the amount of secret information that can be inferred from a program's outputs, where the text of the program is considered public. Their approach relies on taint analysis at the bit level. 
+%It provides a sound upper bound on the actual information flow, but only with respect to the observed runs.
 Newsome et al.~\cite{NMS:PLAS09} develop complementary techniques to bound a program's \emph{channel capacity} using decision procedures (SAT and \#SAT solvers). They apply these techniques to the problem of false positives in dynamic taint analysis. Backes et al.~\cite{BKR:SP09} measure leakage in terms of indistinguishability, or equivalence, between outputs due to different secret artifacts. Their characterization of equivalence relations builds on the information-theoretic notion of entropy.
-Budi et al.~\cite{BLJL:PLDI11} propose $kb$-anonymity, a model inspired by $k$-anonymity for ensuring safe release of private data for the purposes of testing and debugging. Like $k$-anonymity, $kb$-anonymity replaces certain information in the original data for privacy preservation, but beyond that, it also ensures that the replaced data does not lead to divergent program behaviors, and thus testing and debugging are still effective.
+Budi et al.~\cite{BLJL:PLDI11} propose $kb$-anonymity, a model inspired by $k$-anonymity that replaces certain information in the original data for privacy preservation, but beyond that also ensures that the replaced data does not lead to divergent program behaviors.
+
+%for ensuring safe release of private data for the purposes of testing and debugging. Like $k$-anonymity, $kb$-anonymity replaces certain information in the original data for privacy preservation, but beyond that, it also ensures that the replaced data does not lead to divergent program behaviors, and thus testing and debugging are still effective.
 
 While these proposals have all been shown useful, none of these approaches has been shown to be efficient enough to meet realtime constraints. The algorithmic complexity of computing the information-theoretic measures introduced by these works seriously limits their applicability in a realtime setting. Our approach, instead, enables a quantitative/probabilistic mode of reasoning that is simultaneously lightweight, and therefore acceptable for online monitoring, by focusing on relevant features that are efficiently computable.
 
